Fix distorted aspect ratio of images uploaded in forum posts.

--- a/assets/scss/bewelcome.scss
+++ b/assets/scss/bewelcome.scss
@@ -261,6 +261,7 @@ a.active .metric .value {
 
 figure > img {
   max-width: 100%;
+  height: auto;
 }
 
 figure > figcaption {
